# tinyrenderer

./: CMakeLists.txt  README.md
tinyrenderer/: CMakeLists.txt
tinyrenderer/include/tinyrenderer/: geometry.h  model.h  tgaimage.h
tinyrenderer/src/: main.cpp  model.cpp  tgaimage.cpp
